Project

General

Profile

Actions

Bug #51682

closed

bluestore repair might cause invalid write

Added by Igor Fedotov almost 3 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

-26> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 bluestore(/var/lib/ceph/osd/ceph-33) _fsck_on_open fix misreferences in oid:#2:246246c3:::rbd_data.d75dde6b8b4567.0000000000001276:369f7# Blob(0x55eb60d98540 blob([0x153c445000~8000,!~1000,0x153c44d000~7000] csum+shared crc32c/0x1000) use_tracker(0x10*0x1000 0x[1000,1000,1000,1000,1000,1000,1000,1000,0,1000,1000,1000,1000,1000,1000,1000]) SharedBlob(0x55ec2f6c2690 sbid 0x2819))
-25> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 HybridAllocator allocate want 0x8000 unit 0x1000 max_alloc_size 0x0 hint 0x0
-24> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 fbmap_alloc 0x55eb3cf01c00 allocate 0x8000/1000,8000,0
-23> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 fbmap_alloc 0x55eb3cf01c00 allocate extent: 0x17ba000~4000/1000,8000,0
-22> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 fbmap_alloc 0x55eb3cf01c00 allocate extent: 0x17bf000~4000/1000,8000,0
-21> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 5 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) read 0x153c445000~8000 (direct)
-20> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _aio_log_start 0x153c445000~8000
-19> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _aio_log_finish 1 0x153c445000~8000
-18> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) write 0x17ba000~4000 (direct)
-17> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 5 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _sync_write 0x17ba000~4000 (direct)
-16> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) write 0x17bf000~4000 (direct)
-15> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 5 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _sync_write 0x17bf000~4000 (direct)
-14> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 freelist allocate 0x17ba000~4000
-13> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 freelist _xor first_key 0x1780000 last_key 0x1780000
-12> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 freelist allocate 0x17bf000~4000
-11> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 freelist _xor first_key 0x1780000 last_key 0x1780000
-10> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 HybridAllocator allocate want 0x7000 unit 0x1000 max_alloc_size 0x0 hint 0x0
-9> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 fbmap_alloc 0x55eb3cf01c00 allocate 0x7000/1000,7000,0
-8> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 10 fbmap_alloc 0x55eb3cf01c00 allocate extent: 0x17c3000~7000/1000,7000,0
-7> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 5 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) read 0x153c44d000~7000 (direct)
-6> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _aio_log_start 0x153c44d000~7000
-5> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _aio_log_finish 1 0x153c44d000~7000
-4> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) write 0x17c0000~3000 (direct)
-3> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 5 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) _sync_write 0x17c0000~3000 (direct)
-2> 2021-07-14T13:29:44.463+0200 7f45d8ad8100 20 bdev(0x55eb3db34000 /var/lib/ceph/osd/ceph-33/block) write 0xffffffffffffffff~1000 (direct)
-1> 2021-07-14T13:29:44.479+0200 7f45d8ad8100 -1 /build/ceph-15.2.13/src/os/bluestore/KernelDevice.cc: In function 'virtual int KernelDevice::write(uint64_t, ceph::bufferlist&, bool, int)' thread 7f45d8ad8100 time 2021-07-14T13:29:44.469814+0200
/build/ceph-15.2.13/src/os/bluestore/KernelDevice.cc: 876: FAILED ceph_assert(is_valid_io(off, len))

ceph version 15.2.13 (1f5c7871ec0e36ade641773b9b05b6211c308b9d) octopus (stable)
1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x154) [0x7f45d9b150a4]
2: (()+0x28127c) [0x7f45d9b1527c]
3: (KernelDevice::write(unsigned long, ceph::buffer::v15_2_0::list&, bool, int)+0x82) [0x55eb3b7d95f2]
4: (BlueStore::_fsck_on_open(BlueStore::FSCKDepth, bool)+0x690f) [0x55eb3b69858f]
5: (BlueStore::_fsck(BlueStore::FSCKDepth, bool)+0x244) [0x55eb3b69f144]
6: (main()+0x1434) [0x55eb3b5bd9f4]

Related issues 3 (0 open3 closed)

Copied to bluestore - Backport #52766: nautilus: bluestore repair might cause invalid writeRejectedActions
Copied to bluestore - Backport #52767: octopus: bluestore repair might cause invalid writeResolvedActions
Copied to bluestore - Backport #52768: pacific: bluestore repair might cause invalid writeResolvedActions
Actions #1

Updated by Igor Fedotov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 42353
Actions #2

Updated by Kefu Chai over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52766: nautilus: bluestore repair might cause invalid write added
Actions #4

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52767: octopus: bluestore repair might cause invalid write added
Actions #5

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52768: pacific: bluestore repair might cause invalid write added
Actions #6

Updated by Igor Fedotov over 2 years ago

  • Related to Bug #53064: pgmeta onode isn't tagged with FLAG_PGMETA_OMAP if created in pre-mimic are added
Actions #7

Updated by Igor Fedotov over 2 years ago

  • Related to deleted (Bug #53064: pgmeta onode isn't tagged with FLAG_PGMETA_OMAP if created in pre-mimic are)
Actions #8

Updated by Backport Bot almost 2 years ago

  • Tags set to backport_processed
Actions #9

Updated by Konstantin Shalygin almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF